discussion/kv_engine/128645/128645_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Introduce PrometheusStatistics

Change-Id: I2c46729bb102d360dedc268b0fd26d935c654dcb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-21 12:05:29.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-21 12:37:54.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2339/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10: error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
#include <prometheus/client_metric.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2339/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10:
error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2339/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24177/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/prometheus_collector.h:22:10:
fatal error: "prometheus/client_metric.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24177/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/855/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
